--- a/i18n/en.json
+++ b/i18n/en.json
@@ -5,6 +5,7 @@
 			"David Pean <david.pean@gmail.com>"
 		]
 	},
+	"picturegame-desc": "Allows making [[Special:PictureGameHome|picture games]]",
 	"picturegame-signup": "Sign Up",
 	"picturegame-login": "Log in",
 	"picturegame-submittedby": "Submitted By",
