Added confirmation dialogs to 'Un-flag' and 'Delete' actions in admin panel
+ changed unclear 'Reinstate' to 'Un-flag'

Bug: T155322
Change-Id: Ibc9957503ad7d2b7c5b2083536730ec2f2b3ea00

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -20,8 +20,11 @@
 	"picturegame-adminpaneltitle": "Picture Game Admin Panel",
 	"picturegame-adminpanelflagged": "Flagged Images:",
 	"picturegame-adminpanelprotected": "Protected Images:",
-	"picturegame-adminpanelreinstate": "Reinstate",
+	"picturegame-adminpanelunflag": "Un-flag",
+	"picturegame-adminpanelunflag-confirm": "Are you sure you want to un-flag this picture game?",
 	"picturegame-adminpaneldelete": "Delete",
+	"picturegame-adminpaneldelete-confirm": "Are you sure you want to delete this picture game?",
+	"picturegame-confirm-cancel": "Cancel",
 	"picturegame-adminpanelunprotect": "Unprotect",
 	"picturegame-adminpanelbacktogame": "&lt; Back to the Picture Game",
 	"picturegame-creategametitle": "Create a Picture Game",
