Implemented flagging reason.
+ Fixed flag link showing to unlogged users.

Bug: T155451
Change-Id: If98f901cd3d090e9a1fd2450ad9957582b3da455

--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -1,10 +1,10 @@
 {
-    "@metadata": {
-        "authors": []
-    },
-    "picturegame-adminpanelunflag-confirm": "Confirmation message shown in the un-flag dialog.",
-    "picturegame-confirm-cancel": "Cancel button message shown in dialogs",
-    "picturegame-adminpaneldelete-confirm": "Confirmation message shown in the delete dialog.",
-    "picturegame-error-socialprofile": "Error message shown when SocialProfle extension is not installed.",
-  	"picturegame-error-socialprofile-title": "Title for <code>quizgame-error-socialprofile</code>."
+	"@metadata": {
+		"authors": []
+	},
+	"picturegame-adminpanelunflag-confirm": "Confirmation message shown in the un-flag dialog.",
+	"picturegame-adminpanelunflag-confirm": "Confirmation message shown in the delete dialog.",
+	"picturegame-flagimgconfirm": "Confirmation message shown in the report dialog.",
+	"picturegame-error-socialprofile": "Error message shown when SocialProfle extension is not installed.",
+	"picturegame-error-socialprofile-title": "Title for <code>quizgame-error-socialprofile</code>."
 }
