--- a/i18n/en.json
+++ b/i18n/en.json
@@ -20,13 +20,13 @@
 	"picturegame-backbutton": "Go Back",
 	"picturegame-previousgame": "Previous Game",
 	"picturegame-adminpaneltitle": "Picture Game Admin Panel",
+	"picturegame-adminpanelreason": "Reason",
 	"picturegame-adminpanelflagged": "Flagged Images:",
 	"picturegame-adminpanelprotected": "Protected Images:",
 	"picturegame-adminpanelunflag": "Un-flag",
 	"picturegame-adminpanelunflag-confirm": "Are you sure you want to un-flag this picture game?",
 	"picturegame-adminpaneldelete": "Delete",
 	"picturegame-adminpaneldelete-confirm": "Are you sure you want to delete this picture game?",
-	"picturegame-confirm-cancel": "Cancel",
 	"picturegame-adminpanelunprotect": "Unprotect",
 	"picturegame-adminpanelbacktogame": "&lt; Back to the Picture Game",
 	"picturegame-creategametitle": "Create a Picture Game",
@@ -43,11 +43,10 @@
 	"picturegame-editgame-editing-title": "Editing $1",
 	"picturegame-editgamegametitle": "Title",
 	"picturegame-editgameuploadtext": "Upload New Image",
-	"picturegame-flagimgconfirm": "Are you sure you want to report these images?",
+	"picturegame-flagimgconfirm": "Explain why you're reporting these images.",
 	"picturegame-protectimgconfirm": "Are you sure you want to protect these images?",
 	"picturegame-buttonupload": "Upload",
 	"picturegame-buttonsubmit": "Submit",
-	"picturegame-buttoncancel": "Cancel",
 	"picturegame-buttonplaygame": "Play the Picture Game",
 	"picturegame-permalinkflagged": "These pictures have been flagged because of inappropriate content or copyrighted material. To play the picture game, click the button below.",
 	"picturegame-sysmsg-unauthorized": "You aren't authorized to do that.",
