Add missing qqq message documentation
Activate banana checker

Change-Id: I0e121da3a54ffd0aedee1a98a53fd49c97022b3c

--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -2,9 +2,89 @@
 	"@metadata": {
 		"authors": []
 	},
-	"picturegame-adminpanelunflag-confirm": "Confirmation message shown in the un-flag dialog.",
-	"picturegame-adminpaneldelete-confirm": "Confirmation message shown in the delete dialog.",
-	"picturegame-flagimgconfirm": "Confirmation message shown in the report dialog.",
+	"picturegame-desc": "{{desc|name=PictureGame|url=https://www.mediawiki.org/wiki/Extension:PictureGame}}",
+	"picturegame-signup": "A button text",
+	"picturegame-login": "A button text",
+	"picturegame-submittedby": "A header text",
+	"picturegame-reportimages": "A link text",
+	"picturegame-permalink": "A link text",
+	"picturegame-adminpanel": "A link text",
+	"picturegame-protectimages": "A link text",
 	"picturegame-error-socialprofile": "Error message shown when SocialProfle extension is not installed.",
-	"picturegame-error-socialprofile-title": "Title for <code>quizgame-error-socialprofile</code>."
+	"picturegame-error-socialprofile-title": "Title for <code>quizgame-error-socialprofile</code>.",
+	"picturegame-createlink": "A link text",
+	"picturegame-skipbutton": "A navigation link",
+	"picturegame-backbutton": "A navigation link",
+	"picturegame-previousgame": "A navigation link",
+	"picturegame-adminpaneltitle": "A page title",
+	"picturegame-adminpanelreason": "A label message",
+	"picturegame-adminpanelflagged": "A hint message",
+	"picturegame-adminpanelprotected": "A hint message",
+	"picturegame-adminpanelunflag": "A page title",
+	"picturegame-adminpanelunflag-confirm": "Confirmation message shown in the un-flag dialog.",
+	"picturegame-adminpaneldelete": "A page title",
+	"picturegame-adminpaneldelete-confirm": "Confirmation message shown in the delete dialog.",
+	"picturegame-adminpanelunprotect": "A link text",
+	"picturegame-adminpanelbacktogame": "A navigation link",
+	"picturegame-creategametitle": "A page title",
+	"picturegame-creategamenotloggedin": "An error message",
+	"picturegame-creategamewelcome": "A description message",
+	"picturegame-creategameplayinstead": "A button text",
+	"picturegame-creategamegametitle": "A header message",
+	"picturegame-creategamecaptiontext": "A label message",
+	"picturegame-creategamefiletext": "A label message",
+	"picturegame-creategamecreateplay": "A button message",
+	"picturegame-createeditfirstimage": "A header message",
+	"picturegame-createeditsecondimage": "A header message",
+	"picturegame-editgameediting": "A label message",
+	"picturegame-editgame-editing-title": "A page title",
+	"picturegame-editgamegametitle": "A header message",
+	"picturegame-editgameuploadtext": "A link text",
+	"picturegame-flagimgconfirm": "Confirmation message shown in the report dialog.",
+	"picturegame-protectimgconfirm": "A confirmation message",
+	"picturegame-buttonupload": "A button text",
+	"picturegame-buttonsubmit": "A button text",
+	"picturegame-buttonplaygame": "A button text",
+	"picturegame-permalinkflagged": "A link text",
+	"picturegame-sysmsg-unauthorized": "An error message",
+	"picturegame-sysmsg-blocked": "An error message",
+	"picturegame-sysmsg-badkey": "An error message",
+	"picturegame-sysmsg-successfuldelete": "A success message",
+	"picturegame-sysmsg-unsuccessfuldelete": "An error message",
+	"picturegame-sysmsg-unflag": "A success message",
+	"picturegame-sysmsg-flag": "A success message",
+	"picturegame-sysmsg-unprotect": "A success message",
+	"picturegame-sysmsg-protect": "A success message",
+	"picturegame-least": "A header message",
+	"picturegame-leastheat": "A link text",
+	"picturegame-leastvotes": "A link text",
+	"picturegame-minifeed-nomore": "A hint message for no results",
+	"picturegame-minifeed-nomorecreatelink": "A link text",
+	"picturegame-most": "A header message",
+	"picturegame-mostheat": "A description message",
+	"picturegame-mostvotes": "A link text",
+	"picturegame-nomoretitle": "A hint message for no results",
+	"picturegame-no-more": "A hint message for no results",
+	"picturegame-create-threshold-title": "A page title",
+	"picturegame-create-threshold-reason": "An error message",
+	"picturegame-next": "A navigation text",
+	"picturegame-prev": "A navigation text",
+	"picturegame-sorted-most-heat": "A table header",
+	"picturegame-sorted-most-votes": "A table header",
+	"picturegame-sorted-least-heat": "A table header",
+	"picturegame-sorted-least-votes": "A table header",
+	"picturegame-gallery": "A page title",
+	"picturegame-gallery-empty": "A hint message for no results",
+	"picturegame-empty": "A hint message for no results",
+	"picturegame-empty-no-more": "An error message",
+	"picturegame-nothing-to-edit": "An error message",
+	"picturegame-images-category": "A category name",
+	"picturegame-none": "A hint message for no results",
+	"picturegame-js-edit": "A link text",
+	"picturegame-js-error-title": "An error message",
+	"picturegame-js-error-upload-imgone": "An error message",
+	"picturegame-js-error-upload-imgtwo": "An error message",
+	"picturegame-js-editing-imgone": "A header text",
+	"picturegame-js-editing-imgtwo": "A header text",
+	"right-picturegameadmin": "{{doc-right|picturegameadmin}}"
 }
