Add missing action- messages
To pass new structure test, see T220779 for more information

Change-Id: Ie9f0374b003d15232e058752d2171bfdbb64acd5

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -89,5 +89,6 @@
 	"picturegame-js-error-upload-imgtwo": "Please upload image two!",
 	"picturegame-js-editing-imgone": "Editing Image 1",
 	"picturegame-js-editing-imgtwo": "Editing Image 2",
+	"action-picturegameadmin": "administrate picture games",
 	"right-picturegameadmin": "Administrate picture games"
 }
