--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -86,5 +86,6 @@
 	"picturegame-js-error-upload-imgtwo": "An error message",
 	"picturegame-js-editing-imgone": "A header text",
 	"picturegame-js-editing-imgtwo": "A header text",
+	"action-picturegameadmin": "{{doc-action|picturegameadmin}}",
 	"right-picturegameadmin": "{{doc-right|picturegameadmin}}"
 }
