--- a/i18n/en.json
+++ b/i18n/en.json
@@ -90,5 +90,14 @@
 	"picturegame-js-editing-imgone": "Editing Image 1",
 	"picturegame-js-editing-imgtwo": "Editing Image 2",
 	"action-picturegameadmin": "administrate picture games",
-	"right-picturegameadmin": "Administrate picture games"
+	"right-picturegameadmin": "Administrate picture games",
+	"log-name-picturegame": "Picture game log",
+	"log-description-picturegame": "This is a log of all [[Special:PictureGameHome|picture game]] actions (creations, edits, flaggings, deletions).",
+	"logentry-picturegame-create": "$1 {{GENDER:$2|created}} picture game [[Special:PictureGameHome/$4|#$4]]",
+	"logentry-picturegame-delete": "$1 {{GENDER:$2|deleted}} picture game #$4",
+	"logentry-picturegame-edit": "$1 {{GENDER:$2|edited}} picture game [[Special:PictureGameHome/$4|#$4]]",
+	"logentry-picturegame-flag": "$1 {{GENDER:$2|flagged}} picture game [[Special:PictureGameHome/$4|#$4]]",
+	"logentry-picturegame-protect": "$1 {{GENDER:$2|protected}} the images for picture game [[Special:PictureGameHome/$4|#$4]]",
+	"logentry-picturegame-unflag": "$1 {{GENDER:$2|unflagged}} picture game [[Special:PictureGameHome/$4|#$4]]",
+	"logentry-picturegame-unprotect": "$1 {{GENDER:$2|unprotected}} the images for picture game [[Special:PictureGameHome/$4|#$4]]"
 }
