--- a/i18n/en.json
+++ b/i18n/en.json
@@ -13,7 +13,7 @@
 	"picturegame-permalink": "Permalink",
 	"picturegame-adminpanel": "Admin Panel",
 	"picturegame-protectimages": "Protect Images",
-	"picturegame-error-socialprofile": "[https://www.mediawiki.org/wiki/Extension:SocialProfile SocialProfile extension] is not installed. Please install this extension and try again.",
+	"picturegame-error-socialprofile": "[https://www.mediawiki.org/wiki/Special:MyLanguage/Extension:SocialProfile SocialProfile extension] is not installed. Please install this extension and try again.",
 	"picturegame-error-socialprofile-title": "SocialProfile extension is not installed.",
 	"picturegame-createlink": "Create a Picture Game",
 	"picturegame-skipbutton": "Skip",
