Improve i18n-ability for the thresholds feature
Literally just copypasted from SocialProfile's UserProfile/includes/specials/SpecialUpdateProfile.php
with s/user-profile/picturegame/g.

Previously if there was one (or more) thresholds for picture game creation defined with the $wgCreatePictureGameThresholds global,
such as $wgCreatePictureGameThresholds = [ 'edits' => 5 ]; to require users to have five edits before being allowed to create
a picture game, "5 edits" would be shown in English in the picturegame-create-threshold-reason message regardless of the user's
UI language and this string was not translatable. This patch corrects that and makes the threshold reason strings translatable,
just like in SocialProfile.

Change-Id: I6832c8630eb62215818ee99fbe637049388b235e

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -66,6 +66,22 @@
 	"picturegame-no-more": "There are no new picture games to play.<br />\nDon't get sad, [{{fullurl:Special:PictureGameHome|picGameAction=startCreate}} create your very own] or [[Special:RandomPoll|take some polls!]]",
 	"picturegame-create-threshold-title": "Create Picture Game",
 	"picturegame-create-threshold-reason": "Sorry, you cannot create a picture game until you have at least $1",
+	"picturegame-create-threshold-edits": "{{PLURAL:$1|one edit|$1 edits}}",
+	"picturegame-create-threshold-votes": "{{PLURAL:$1|one vote|$1 votes}}",
+	"picturegame-create-threshold-comments": "{{PLURAL:$1|one comment|$1 comments}}",
+	"picturegame-create-threshold-comment-score-plus": "{{PLURAL:$1|one thumbs up|$1 thumbs up}}",
+	"picturegame-create-threshold-comment-score-minus": "{{PLURAL:$1|one ignored comment|$1 ignored comments}}",
+	"picturegame-create-threshold-recruits": "{{PLURAL:$1|one recruit|$1 recruits}}",
+	"picturegame-create-threshold-friend-count": "{{PLURAL:$1|one friend|$1 friends}}",
+	"picturegame-create-threshold-foe-count": "{{PLURAL:$1|one foe|$1 foes}}",
+	"picturegame-create-threshold-weekly-wins": "{{PLURAL:$1|one weekly win|$1 weekly wins}}",
+	"picturegame-create-threshold-monthly-wins": "{{PLURAL:$1|one monthly win|$1 monthly wins}}",
+	"picturegame-create-threshold-poll-votes": "{{PLURAL:$1|one poll vote|$1 poll votes}}",
+	"picturegame-create-threshold-picture-game-votes": "{{PLURAL:$1|one picture game vote|$1 picture game votes}}",
+	"picturegame-create-threshold-quiz-created": "{{PLURAL:$1|one created quiz|$1 created quizzes}}",
+	"picturegame-create-threshold-quiz-answered": "{{PLURAL:$1|one answered quiz|$1 answered quizzes}}",
+	"picturegame-create-threshold-quiz-correct": "{{PLURAL:$1|one correctly answered quiz|$1 correctly answered quizzes}}",
+	"picturegame-create-threshold-quiz-points": "{{PLURAL:$1|one quiz point|$1 quiz points}}",
 	"picturegame-next": "next",
 	"picturegame-prev": "prev",
 	"picturegame-sorted-most-heat": "Picture Games Sorted By Most Heat",
