--- a/i18n/fi.json
+++ b/i18n/fi.json
@@ -60,6 +60,20 @@
 	"picturegame-no-more": "Enää ei ole uusia kuvapelejä pelattavaksi.<br />\nÄlä murehdi, [{{fullurl:Special:PictureGameHome|picGameAction=startCreate}} luo omasi] tai [[Special:RandomPoll|ota osaa äänestyksiin!]]",
 	"picturegame-create-threshold-title": "Luo kuvapeli",
 	"picturegame-create-threshold-reason": "Pahoittelut, et voi luoda kuvapeliä ennen kuin sinulla on ainakin $1",
+	"picturegame-create-threshold-edits": "{{PLURAL:$1|yksi muokkaus|$1 muokkausta}}",
+	"picturegame-create-threshold-votes": "{{PLURAL:$1|yksi annettu ääni|$1 annettua ääntä}}",
+	"picturegame-create-threshold-comments": "{{PLURAL:$1|yksi kommentti|$1 kommenttia}}",
+	"picturegame-create-threshold-recruits": "{{PLURAL:$1|yksi värvätty käyttäjä|$1 värvättyä käyttäjää}}",
+	"picturegame-create-threshold-friend-count": "{{PLURAL:$1|yksi ystävä|$1 ystävää}}",
+	"picturegame-create-threshold-foe-count": "{{PLURAL:$1|yksi vihollinen|$1 vihollista}}",
+	"picturegame-create-threshold-weekly-wins": "{{PLURAL:$1|yksi viikottainen voitto|$1 viikottaista voittoa}}",
+	"picturegame-create-threshold-monthly-wins": "{{PLURAL:$1|yksi kuukausittainen voitto|$1 kuukausittaista voittoa}}",
+	"picturegame-create-threshold-poll-votes": "{{PLURAL:$1|yksi ääni äänestyksissä|$1 ääntä äänestyksissä}}",
+	"picturegame-create-threshold-picture-game-votes": "{{PLURAL:$1|yksi kuvapeliääni|$1 kuvapeliääntä}}",
+	"picturegame-create-threshold-quiz-created": "{{PLURAL:$1|yksi luotu visailu|$1 luotua visailua}}",
+	"picturegame-create-threshold-quiz-answered": "{{PLURAL:$1|yksi vastattu visailu|$1 vastattua visailua}}",
+	"picturegame-create-threshold-quiz-correct": "{{PLURAL:$1|yksi oikein vastattu visailu|$1 oikein vastattua visailua}}",
+	"picturegame-create-threshold-quiz-points": "{{PLURAL:$1|yksi visailupiste|$1 visailupistettä}}",
 	"picturegame-next": "seur.",
 	"picturegame-prev": "edell.",
 	"picturegame-gallery": "Galleria",
