Improve logging when creating a new picture game or editing an existing one
* Picture game title is now logged (for edit actions, if the title is changed, the old title is _not_ logged, only the new one is)
* Fix ID logging on game creation: $id was initially set to -1 and the addLogEntry() was happening literally before the correct ID was fetched, so the wrong ID would be logged prior to this change

Change-Id: I5bb1be9fbd4413b92021463954211087be8200c9

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -105,9 +105,9 @@
 	"right-picturegameadmin": "Administrate picture games",
 	"log-name-picturegame": "Picture game log",
 	"log-description-picturegame": "This is a log of all [[Special:PictureGameHome|picture game]] actions (creations, edits, flaggings, deletions).",
-	"logentry-picturegame-create": "$1 {{GENDER:$2|created}} picture game [[Special:PictureGameHome/$4|#$4]]",
+	"logentry-picturegame-create": "$1 {{GENDER:$2|created}} picture game [[Special:PictureGameHome/$4|#$4]] with the title [[Special:PictureGameHome/$4|\"$5\"]]",
 	"logentry-picturegame-delete": "$1 {{GENDER:$2|deleted}} picture game #$4",
-	"logentry-picturegame-edit": "$1 {{GENDER:$2|edited}} picture game [[Special:PictureGameHome/$4|#$4]]",
+	"logentry-picturegame-edit": "$1 {{GENDER:$2|edited}} picture game [[Special:PictureGameHome/$4|#$4: \"$5\"]]",
 	"logentry-picturegame-flag": "$1 {{GENDER:$2|flagged}} picture game [[Special:PictureGameHome/$4|#$4]]",
 	"logentry-picturegame-protect": "$1 {{GENDER:$2|protected}} the images for picture game [[Special:PictureGameHome/$4|#$4]]",
 	"logentry-picturegame-unflag": "$1 {{GENDER:$2|unflagged}} picture game [[Special:PictureGameHome/$4|#$4]]",
