--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -94,6 +94,10 @@
 	"picturegame-nothing-to-edit": "Error message shown when someone attempts to edit a nonexistent picture game, i.e. <code>Special:PictureGameHome?picGameAction=editPanel</code> is called with an <code>id</code> URL parameter that is somehow invalid",
 	"picturegame-images-category": "Default category name for any and all images uploaded via the upload forms on Special:PictureGameHome",
 	"picturegame-none": "Used on the picture game admin panel when viewing flagged or protected images to indicate that there are no flagged/protected images to be displayed",
+	"picturegame-image-picker-launch-button": "Button text of a button shown on Special:PictureGameHome when creating a new picture game or editing an existing one; clicking on the button displays an image picker which allows the user to choose a pre-existing image (either stored on the local wiki or uploaded to a shared media repository, such as Wikimedia Commons) instead of uploading an image to use on the picture game they're creating or editing via the special page",
+	"picturegame-image-picker": "Header label for the image browser on Special:PictureGameHome when creating a new picture game or editing an existing one",
+	"picturegame-image-picker-select": "Button for selecting an image on Special:PictureGameHome when creating a new picture game or editing an existing one\n{{Identical|Select}}",
+	"picturegame-js-change-image": "Button text, shown via JavaScript after the user has chosen to use an existing image when creating a new picture game or editing an existing one on Special:PictureGameHome; prior to choosing an image the text of this button is {{msg-mw|picturegame-image-picker-launch-button}}",
 	"picturegame-js-edit": "A link text shown via JavaScript",
 	"picturegame-js-error-title": "An error message shown via JavaScript when the user tries to submit the form on Special:PictureGameHome but they've forgotten to give the picture game a title",
 	"picturegame-js-error-upload-imgone": "An error message shown via JavaScript when the user tries to submit the form on Special:PictureGameHome but they've forgotten to upload the first picture",
